[gd_scene load_steps=4 format=3 uid="uid://i21unejxpoo5"]

[ext_resource type="Texture2D" uid="uid://rch3mp8m3kaa" path="res://Textures/Items/Weapons/sword.png" id="1_flo3g"]
[ext_resource type="Script" path="res://src/components/experience/gui/item_option.gd" id="1_uqdui"]
[ext_resource type="FontFile" uid="uid://btbo567e07wpn" path="res://Font/tenderness.otf" id="2_8klko"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.156
offset_right = 0.159988
offset_bottom = 0.079999
color = Color(0.482353, 0.482353, 0.482353, 1)
script = ExtResource("1_uqdui")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_flo3g")

[node name="LabelName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_8klko")
text = "Name"
horizontal_alignment = 1

[node name="LabelDescription" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_8klko")
theme_override_font_sizes/font_size = 8
text = "Description of the item"
autowrap_mode = 3

[node name="LabelLevel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_8klko")
theme_override_font_sizes/font_size = 12
text = "Level: 1"

[node name="Button" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0
